# XOpenPlayer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  build.bat  build.ps1  build.sh  keyboard_short.txt  lastmiles_patch.diff  player_patch.diff  sample.m3u  track.txt  x11headers.txt
include/: audio.h  player.h  playlist.h  util.h  wav.h
src/: audio.c  main.c  player.c  playlist.c  util.c  wav.c
